--- a/docs/output.css
+++ b/docs/output.css
@@ -353,13 +353,6 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   /* 2 */
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -525,6 +518,10 @@ input[type="checkbox"]:checked + .checkbox-span {
   margin-right: auto;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -553,6 +550,10 @@ input[type="checkbox"]:checked + .checkbox-span {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-\[900px\] {
   height: 900px;
 }
@@ -561,12 +562,12 @@ input[type="checkbox"]:checked + .checkbox-span {
   height: 0.75rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-\[1\.1rem\] {
+  height: 1.1rem;
 }
 
-.h-\[15px\] {
-  height: 15px;
+.h-\[10px\] {
+  height: 10px;
 }
 
 .h-12 {
@@ -581,12 +582,12 @@ input[type="checkbox"]:checked + .checkbox-span {
   width: 100%;
 }
 
-.w-\[43px\] {
-  width: 43px;
+.w-\[28px\] {
+  width: 28px;
 }
 
-.w-\[15px\] {
-  width: 15px;
+.w-\[10px\] {
+  width: 10px;
 }
 
 .w-\[70\%\] {
@@ -623,12 +624,16 @@ input[type="checkbox"]:checked + .checkbox-span {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-around {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
+.justify-items-center {
+  justify-items: center;
 }
 
 .gap-4 {
@@ -637,6 +642,22 @@ input[type="checkbox"]:checked + .checkbox-span {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-\[2px\] {
+  gap: 2px;
+}
+
+.gap-\[8px\] {
+  gap: 8px;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .rounded-md {
@@ -677,6 +698,11 @@ input[type="checkbox"]:checked + .checkbox-span {
   background-color: hsl(174 77% 80% / var(--tw-bg-opacity));
 }
 
+.bg-orange-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
+}
+
 .bg-ToggleBg {
   --tw-bg-opacity: 1;
   background-color: hsl(223 50% 87% / var(--tw-bg-opacity));
@@ -685,11 +711,6 @@ input[type="checkbox"]:checked + .checkbox-span {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-orange-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
 .bg-CtaBg {
@@ -713,8 +734,8 @@ input[type="checkbox"]:checked + .checkbox-span {
   background-repeat: no-repeat;
 }
 
-.p-8 {
-  padding: 2rem;
+.p-12 {
+  padding: 3rem;
 }
 
 .p-\[35px\] {
@@ -729,16 +750,6 @@ input[type="checkbox"]:checked + .checkbox-span {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .pb-20 {
@@ -763,8 +774,8 @@ input[type="checkbox"]:checked + .checkbox-span {
   line-height: 2.25rem;
 }
 
-.text-\[15px\] {
-  font-size: 15px;
+.text-\[12px\] {
+  font-size: 12px;
 }
 
 .text-\[8px\] {
@@ -826,6 +837,45 @@ input[type="checkbox"]:checked + .checkbox-span {
   background-color: hsl(174 86% 45% / var(--tw-bg-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:h-6 {
+    height: 1.5rem;
+  }
+
+  .sm\:h-\[15px\] {
+    height: 15px;
+  }
+
+  .sm\:w-\[44px\] {
+    width: 44px;
+  }
+
+  .sm\:w-\[15px\] {
+    width: 15px;
+  }
+
+  .sm\:w-\[28px\] {
+    width: 28px;
+  }
+
+  .sm\:p-12 {
+    padding: 3rem;
+  }
+
+  .sm\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:top-\[20\%\] {
     top: 20%;
@@ -875,10 +925,6 @@ input[type="checkbox"]:checked + .checkbox-span {
     align-items: center;
   }
 
-  .md\:justify-center {
-    justify-content: center;
-  }
-
   .md\:justify-between {
     justify-content: space-between;
   }
@@ -898,6 +944,11 @@ input[type="checkbox"]:checked + .checkbox-span {
 
   .md\:text-\[16px\] {
     font-size: 16px;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -923,12 +974,25 @@ input[type="checkbox"]:checked + .checkbox-span {
     margin-right: 2rem;
   }
 
+  .lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .lg\:h-8 {
+    height: 2rem;
+  }
+
   .lg\:w-\[55\%\] {
     width: 55%;
   }
 
   .lg\:w-\[85\%\] {
     width: 85%;
+  }
+
+  .lg\:w-\[75\%\] {
+    width: 75%;
   }
 
   .lg\:grid-cols-2 {
@@ -947,8 +1011,33 @@ input[type="checkbox"]:checked + .checkbox-span {
     justify-content: flex-start;
   }
 
+  .lg\:justify-end {
+    justify-content: flex-end;
+  }
+
   .lg\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .lg\:gap-\[10px\] {
+    gap: 10px;
+  }
+
+  .lg\:place-self-end {
+    place-self: end;
+  }
+
+  .lg\:self-end {
+    align-self: flex-end;
+  }
+
+  .lg\:p-16 {
+    padding: 4rem;
+  }
+
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .lg\:text-3xl {
@@ -995,6 +1084,14 @@ input[type="checkbox"]:checked + .checkbox-span {
     justify-content: space-between;
   }
 
+  .laptop\:self-start {
+    align-self: flex-start;
+  }
+
+  .laptop\:self-end {
+    align-self: flex-end;
+  }
+
   .laptop\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1010,11 +1107,52 @@ input[type="checkbox"]:checked + .checkbox-span {
     left: 15%;
   }
 
+  .tablet\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .tablet\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .tablet\:block {
+    display: block;
+  }
+
+  .tablet\:h-6 {
+    height: 1.5rem;
+  }
+
+  .tablet\:h-\[15px\] {
+    height: 15px;
+  }
+
   .tablet\:w-\[75\%\] {
     width: 75%;
   }
 
+  .tablet\:w-\[44px\] {
+    width: 44px;
+  }
+
   .tablet\:w-\[50\%\] {
     width: 50%;
+  }
+
+  .tablet\:w-\[15px\] {
+    width: 15px;
+  }
+
+  .tablet\:w-\[28px\] {
+    width: 28px;
+  }
+
+  .tablet\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
+  .tablet\:text-\[14px\] {
+    font-size: 14px;
   }
 }
